@@ -1,5 +1,11 @@
 2020-03-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by: kautism
+	patch #9893: [PATCH] Reader reads ftdi handle after main thread close it
+	* ft245r.c: Wait until reader thread has been stopped before closing FTDI
+
+2020-03-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Fix compiler warnings
 	* avr.c: misleading indentation after spin loop
 	* fileio.c: EM_AVR32 might be defined in system <libelf.h>
